tdf#147921 Filesave DOC: wrong layout and then all missing from 7.3

regression from
    commit 990b2cb056788f7f412656a303456d90c003cf83
    Author: Noel Grandin <noel@peralex.com>
    Date:   Mon Jun 21 13:00:07 2021 +0200
    simplify and improve Wildcard

Cannot pass a string_view into something expecting a char* because
then it gets the length wrong.

Change-Id: I638660a1e9a8a0d17e4d2f77500b3f01365a43d3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/131396
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit a378ac93e1b4e3c0dacdd3f0a3500813714537c7)